@@ -22,6 +22,7 @@ package cascading.flow;
 
 import java.io.IOException;
 import java.util.Collection;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -139,6 +140,18 @@ public interface Flow<Config> extends UnitOfWork<FlowStats>
    */
   @Override
   String getID();
+
+  /**
+   * Returns an immutable map of properties giving more details about the Flow object.
+   * <p/>
+   * See {@link cascading.flow.FlowDef#addDescription(String, String)} to set values on a given Flow.
+   * <p/>
+   * Flow descriptions provide meta-data to monitoring systems describing the workload a given Flow represents.
+   * For known description types, see {@link cascading.flow.FLowDescriptors}.
+   *
+   * @return Map<String,String>
+   */
+  public Map<String, String> getFlowDescriptor();
 
   @Override
   String getTags();
@@ -289,7 +302,6 @@ public interface Flow<Config> extends UnitOfWork<FlowStats>
    * @return the trapsCollection (type Collection<Tap>) of this Flow object.
    */
   Collection<Tap> getCheckpointsCollection();
-
 
   /**
    * Method getFlowSkipStrategy returns the current {@link cascading.flow.FlowSkipStrategy} used by this Flow.
