@@ -87,9 +87,9 @@ public class HadoopFlow extends BaseFlow<JobConf>
     return jobConf.getInt( MAX_CONCURRENT_STEPS, 0 );
     }
 
-  protected HadoopFlow( PlatformInfo platformInfo, Map<Object, Object> properties, JobConf jobConf, String name )
+  protected HadoopFlow( PlatformInfo platformInfo, Map<Object, Object> properties, JobConf jobConf, String name, Map<String, String> flowDescriptor )
     {
-    super( platformInfo, properties, jobConf, name );
+    super( platformInfo, properties, jobConf, name, flowDescriptor );
     initFromProperties( properties );
     }
 
